RELEASE :: v0.1.2 - Bug fix